--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.10.99
+	ios.pm: filter lines from 'term exec prompt time' on IOS - Joe Clarke
+
 	junos.pm: ShowSystemLicense() must recognize some backend daemon
 	communication errors
 
