--- a/man/clogin.1
+++ b/man/clogin.1
@@ -59,10 +59,12 @@ A10,
 Alteon,
 Avocent (Cyclades),
 Bay Networks (nortel),
+Brocade,
 Cisco Small Business devices,
 ADC-kentrox EZ-T3 mux,
 Fortinet firewalls,
 Foundry,
+Cisco Firepower,
 HP Procurve switches and Cisco AGMs,
 Hitachi routers,
 Juniper Networks,
@@ -71,6 +73,7 @@ Mikrotik routers,
 Netscreen firewalls,
 Nokia (Alcatel-Lucent),
 Netscaler,
+Riverbed Steelhead,
 Riverstone,
 Netopia,
 Cisco WLCs,
@@ -81,10 +84,12 @@ named
 .B alogin,
 .B avologin,
 .B blogin,
+.B brlogin,
 .B csblogin,
 .B elogin,
 .B flogin,
 .B fnlogin,
+.B fxlogin,
 .B hlogin,
 .B htlogin,
 .B jlogin,
@@ -93,6 +98,7 @@ named
 .B nlogin,
 .B noklogin,
 .B nslogin,
+.B rblogin,
 .B rivlogin,
 .B tlogin,
 .B wlogin,
