--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+3.11.99
+	ios.pm: do not use perl /n regex modifier; it didnt appear until 5.22 and is causing
+	heartburn
+
 3.11
 	ios.pm: some IOS, possibly newer releases, report command authorization
 	failures in a different format - Majed
