jerancid: remove more temperatures - Christian Rohmann via debian package

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.12.99
+	jerancid: remove more temperatures - Christian Rohmann via debian package
+
 	man: Move rancid_intro(1) and lg_intro(1) to man section 7 - - Roland
 	Rosenfeld
 
