--- a/man/router.db.5
+++ b/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "24 March 2020"
+.TH "router.db" "5" "22 April 2020"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -184,9 +184,6 @@ type.
 .B juniper
 A Juniper router.
 .TP
-.B mikrotik
-A Mikrotik router.
-.TP
 .B mrtd
 A host running the (Merit) MRTd daemon.
 .TP
@@ -213,6 +210,10 @@ A Redback router, NAS, etc.
 .ID 15n
 .B riverstone
 A Riverstone NAS or Cabletron (starting with version ~9.0.3) router.
+.TP
+.ID 15n
+.B routeros
+A Mikrotik RouterOS router.
 .TP
 .ID 15n
 .B smc
