--- a/man/router.db.5
+++ b/man/router.db.5
@@ -180,9 +180,6 @@ type.
 .B juniper
 A Juniper router.
 .TP
-.B mikrotik
-A Mikrotik router.
-.TP
 .B mrtd
 A host running the (Merit) MRTd daemon.
 .TP
@@ -209,6 +206,10 @@ A Redback router, NAS, etc.
 .ID 15n
 .B riverstone
 A Riverstone NAS or Cabletron (starting with version ~9.0.3) router.
+.TP
+.ID 15n
+.B routeros
+A Mikrotik RouterOS router.
 .TP
 .ID 15n
 .B smc
