--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.12.99
+	rancid.pm: check that opt_t is defined before use
+
 	xilogin: arcos login banner match can fail if a motd-banner is set
 
 	mtrancid: filter dynamic configuration, such as fluctuating pppoe
