zrancid, frr.pm: convert zebra script to FRR perl library

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.12.99
+	zrancid, frr.pm: convert zebra script to FRR perl library
+
 	wlogin: send_human the logout command
 
 	rancid.types.base: note AAA role needed for WLC - Charles Allen
