--- a/man/rancid.1
+++ b/man/rancid.1
@@ -74,9 +74,9 @@ The generic rancid script; supporting Allied Telesis AW+ devices,
 Arbor Networks Appliances, Arista EOS, Ciena Waverserver, Cisco IOS,
 Cisco IOS-XR, Cisco NX-OS, Cisco WLC, (some) Dell switches,
 Extreme switches, Fortinet firewalls, Force10 (aka Dell NOS9),
-Foundry (aka some Brocade) devices, Juniper JunOS and JunOS EVO,
-Nokia (Alcatel-Lucent) SR OS, and UBNT Edgemax and EdgeRouter,
-and SMC (some Dell switches).
+Foundry (aka some Brocade) devices, FRR Routing S/W (formerly Quagga
+or Zebra), Juniper JunOS and JunOS EVO, Nokia (Alcatel-Lucent) SR OS,
+and UBNT Edgemax and EdgeRouter, and SMC (some Dell switches).
 It uses the device O/S modules for parsing routines as determined by the
 .BR rancid.types.conf (5)
 file(s).
@@ -116,9 +116,6 @@ Netopia sDSL/T1 routers
 .TP
 .B xirancid
 Xirrus arrays
-.TP
-.B zrancid
-Zebra routing software
 .PP
 If
 .B rancid
