--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 3.12.99
-	mtrancid, mikrotik.pm: convert mikrotik to module
+	mtrancid, routeros.pm: convert mikrotik to module
 
 	control_rancid: omit .old when looking for rogue files
 
