ios.pm: show license could return an author failure - Majed Zouhairy

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.12.99
+	ios.pm: show license could return an author failure - Majed Zouhairy
+
 	zrancid, frr.pm: convert zebra script to FRR perl library
 
 	wlogin: send_human the logout command
