--- a/man/clogin.1
+++ b/man/clogin.1
@@ -57,7 +57,7 @@ or Redback router.
 There are complementary scripts for
 A10,
 Alteon,
-Avocent (Cyclades),
+Vertiv (Avocent (Cyclades)),
 Bay Networks (nortel),
 Brocade,
 Cisco Small Business devices,
