--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.12.99
+	vertiv.pm: # seems to be the ACS comment character, not !.  Collect
+	total memory from /proc/meminfo.  Comment output from some cat commands.
+
 	rancid.pm: return an error when a rancid.type.conf line has too few
 	fields
 
