--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.12.99
+	jlogin: adjust code to set screen with for -s and -c
+
 	lg.cgi, lgform.cgi: fix missing variable inializations - Troy Boudreau
 
 	ios.pm: ASAv fails to read licensing debug info sometimes
