sros.pm: end of config marker disappeared ~20.5, to be fixed in 20.7r1. Use the MD context marker as an alternative marker

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.12.99
+	sros.pm: end of config marker disappeared ~20.5, to be fixed in 20.7r1.
+	Use the MD context marker as an alternative marker
+
 	jlogin: adjust code to set screen with for -s and -c
 
 	lg.cgi, lgform.cgi: fix missing variable inializations - Troy Boudreau
