--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.12.99
+	arcos.pm: show features command no longer exposed in ~4.x
+
 	sros.pm: end of config marker disappeared ~20.5, to be fixed in 20.7r1.
 	Use the MD context marker as an alternative marker
 
