--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	xilogin: setting system motd over-writes the default, not augment
+
 	iosxr.pm: inloop() check for exit after the command loop, like junos
 
 	ios.pm: catch authorization failure for show switch detail
