wavesvros.pm: adjust PS W filter for new variant in 1.6
+------------------------- POWER SUPPLY STATUS ---------------------------------
------+-----------+
| Slot   | Oper   | Type    | Model            | Serial Number | Part Number / R
ev    | Power (W) |
+--------+--------+---------+------------------+---------------+----------------
------+-----------+
| PSU-1  | Normal | DC      | WS DC PSU        | K846S2224RABP |    186-1501-900
/AB   |     259.0 |
+--------+--------+---------+------------------+---------------+----------------
------+-----------+
| PSU-2  | Normal | DC      | WS DC PSU        | K846S2222ZABP |    186-1501-900
/AB   |     311.5 |
+--------+--------+---------+------------------+---------------+----------------
------+-----------+

but had previously shared with me

+------------------------------------ POWER SUPPLY STATUS ----------------------
-----------------+-----------+
| Slot   | Admin    | Oper   | Type    | Model            | Serial Number | Part
 Number / Rev    | Power (W) |
+--------+----------+--------+---------+------------------+---------------+-----
-----------------+-----------+
| PSU-1  | Enabled  | Normal | DC      | WS DC PSU        | K846S2224RABP |    1
86-1501-900/AB   |     256.5 |
+--------+----------+--------+---------+------------------+---------------+-----
-----------------+-----------+
| PSU-2  | Enabled  | Normal | DC      | WS DC PSU        | K846S2222ZABP |    1
86-1501-900/AB   |     314.0 |
+--------+----------+--------+---------+------------------+---------------+-----
-----------------+-----------+

one has the admin field, one does not.

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	wavesvros.pm: adjust PS W filter for new variant in 1.6
+
 	sros.pm: filter SROS 21.2.R1 path change
 
 	xilogin: setting system motd over-writes the default, not augment
