--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	hlogin: change default prompt to avoid matching Linux kernel version
+	on Dell NOS: Linux <hostname>-SWA005 4.9.110 #1 SMP Debian ...
+
 	wavesvros.pm: adjust PS W filter for new variant in 1.6 - 1.6.4
 
 	sros.pm: filter SROS 21.2.R1 path change
