dnos10.pm: fix tacacs/radius-server filter - Arron Williamson

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	dnos10.pm: fix tacacs/radius-server filter - Arron Williamson
+
 	hlogin: change default prompt to avoid matching Linux kernel version
 	on Dell NOS: Linux <hostname>-SWA005 4.9.110 #1 SMP Debian ...
 
