--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	iosxr.pm: afaik XR has never supported Classic-like access-lists;
+	dropping this code inheritted from ios.pm
+
 	iosxr.pm: fail on "drbg intiantiate failed" - XR 7.1.3.13
 
 	ios.pm: show license feature on CSR1000v returns Ambiguous command
