Clarification of noted Caveat.

--- a/man/rancid-run.1
+++ b/man/rancid-run.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid-run" "1" "22 December 2016"
+.TH "rancid-run" "1" "21 July 2021"
 .SH NAME
 rancid-run \- run rancid for each of the groups
 .SH SYNOPSIS
@@ -143,3 +143,4 @@ configuration file.
 DO NOT leave temporary files in the <group name>/configs directory, they WILL
 be removed by
 .BR control_rancid (1).
+The subdirectory <group name>/configs/.old can used for this purpose.
