ciscowlc.pm: filter garbage inserted by virtual controller 8.3.150.0; random characters & lines - github.com/DarkNinja77
virtual controller 8.3.150.0 inserts random garbage characters and lines:
	The common garbage character is the ASCII DELETE control character 0x7F.
	It also inserts 0x01 characters in a single line by itself.

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	ciscowlc.pm: filter garbage inserted by virtual controller 8.3.150.0;
+	random characters & lines - github.com/DarkNinja77
+
 	panos.pm: trip trailing WS & GC unused code - github.com/DarkNinja77
 
 	rancidcontrib.pm: add library of contributed rancid filters, etc,
