--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	nslogin: netscalar 13.x may include a prefix to the prompt, eg: "super>"
+
 	Add rancid.conf:ACLFILTERREGEX knob for ACL filtering
 
 	ciscowlc.pm: filter garbage inserted by virtual controller 8.3.150.0;
