--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	rancid.types.base: add paloaltoxml device type to collect xml config
+
 	nslogin: netscalar 13.x may include a prefix to the prompt, eg: "super>"
 
 	Add rancid.conf:ACLFILTERREGEX knob for ACL filtering
