--- a/man/rancid.1
+++ b/man/rancid.1
@@ -71,13 +71,13 @@ F5 BigIPs
 .TP
 .B rancid
 The generic rancid script; supporting Aerohive HiveOS access points,
-Allied Telesis AW+ devices, 
-Arbor Networks Appliances, Arista EOS, Ciena Waverserver, Cisco IOS,
-Cisco IOS-XR, Cisco NX-OS, Cisco WLC, (some) Dell switches,
-Extreme switches, Fortinet firewalls, Force10 (aka Dell NOS9),
-Foundry (aka some Brocade) devices, FRR Routing S/W (formerly Quagga
-or Zebra), Juniper JunOS and JunOS EVO, Nokia (Alcatel-Lucent) SR OS,
-and UBNT Edgemax and EdgeRouter, and SMC (some Dell switches).
+Allied Telesis AW+ devices, Arbor Networks Appliances, Arista EOS,
+Ciena Waverserver, Cisco IOS, Cisco IOS-XR, Cisco NX-OS, Cisco WLC,
+(some) Dell switches, Extreme switches, Fortinet firewalls, Force10
+(aka Dell NOS9), Foundry (aka some Brocade) devices, FRR Routing S/W
+(formerly Quagga or Zebra), Juniper JunOS and JunOS EVO, Nokia
+(Alcatel-Lucent) SR OS, UBNT Edgemax and EdgeRouter, and SMC
+(some Dell switches).
 It uses the device O/S modules for parsing routines as determined by the
 .BR rancid.types.conf (5)
 file(s).
