sros.pm: filter new/changed timestamps in configs for 21.10.R1
changed: # Finished 2021-11-12T04:00:04.4-05:00
new: # Last modified 2021-11-11T19:38:55.8+00:00 by <user> (MD-CLI) from <ip>
     # Last saved 2021-11-11T19:38:56.0+00:00 by <user> from <ip>

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	sros.pm: filter new/changed timestamps in configs for 21.10.R1
+
 	mtlogin: change login options to dumb mode to eliminate terminal escape
 	codes - github.com/mathiswolff
 
