--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	nxos.pm: filter logflahs: icamsql db new in nexos 10.2
+
 	sros.pm: filter new/changed timestamps in configs for 21.10.R1
 
 	mtlogin: change login options to dumb mode to eliminate terminal escape
