--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	junos.pm: filter timestamps from show <*> alarms
+
 	rancid.types.conf: add show system alarms for junipers
 
 	nxos.pm: filter logflahs: icamsql db new in nexos 10.2
