add manpages for opengear

--- a/man/clogin.1
+++ b/man/clogin.1
@@ -73,6 +73,7 @@ Mikrotik routers,
 Netscreen firewalls,
 Nokia (Alcatel-Lucent),
 Netscaler,
+Opengear,
 Riverbed Steelhead,
 Riverstone,
 Netopia,
@@ -98,6 +99,7 @@ named
 .B nlogin,
 .B noklogin,
 .B nslogin,
+.B oglogin,
 .B rblogin,
 .B rivlogin,
 .B tlogin,
