--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	fnlogin: process input line by line to improve prompt matching accuracy
+
 	rancid.types.base: note Transition Networks switches work as ios-sb
 
 	iosxr.pm: fail if show rpl maximum returns file descriptor error
